[gd_scene load_steps=2 format=3 uid="uid://dcrd14o24qurl"]

[ext_resource type="Script" uid="uid://byg21kjff3r27" path="res://Main.gd" id="1_glv2v"]

[node name="Main" type="Node3D"]
script = ExtResource("1_glv2v")

[node name="Table" type="StaticBody3D" parent="."]

[node name="CardSpawn" type="Marker3D" parent="."]

[node name="CardRow" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 22.0
offset_top = 91.0
offset_right = 83.0
offset_bottom = 114.0
text = "Score: 0"

[node name="TotalScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 105.0
offset_top = -20.0
offset_right = 145.0
offset_bottom = 3.0

[node name="CardContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 19.0
offset_top = 50.0
offset_right = 92.0
offset_bottom = 90.0

[node name="DrawButton" type="Button" parent="CanvasLayer"]
offset_top = 123.0
offset_right = 50.0
offset_bottom = 154.0
text = "Draw"

[node name="HoldButton" type="Button" parent="CanvasLayer"]
offset_left = 62.0
offset_top = 123.0
offset_right = 107.0
offset_bottom = 154.0
text = "Hold"

[node name="ResultLabel" type="Label" parent="CanvasLayer"]
offset_left = 35.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 25.0
text = "\"\""

[node name="RestartTimer" type="Timer" parent="CanvasLayer"]
wait_time = 1.5
one_shot = true
